--- a/src/client/view/doctor/AddEditSampleView.fxml
+++ b/src/client/view/doctor/AddEditSampleView.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="690.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
+<AnchorPane prefHeight="500.0" prefWidth="690.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
    <children>
       <Label layoutX="95.0" layoutY="22.0" text="Sample">
          <font>
@@ -19,7 +14,6 @@
          </font>
       </Label>
       <Button layoutX="206.0" layoutY="424.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="70.0" text="Save" />
-      <ComboBox fx:id="sampleType" layoutX="51.0" layoutY="92.0" prefHeight="26.0" prefWidth="211.0" promptText="Type" />
       <DatePicker fx:id="deadline" layoutX="51.0" layoutY="163.0" prefHeight="26.0" prefWidth="211.0" promptText="Deadline" />
       <ComboBox fx:id="priority" layoutX="51.0" layoutY="206.0" prefHeight="26.0" prefWidth="211.0" promptText="Priority" />
       <Button layoutX="125.0" layoutY="424.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" />
@@ -33,5 +27,6 @@
          </effect>
       </ImageView>
       <TextArea fx:id="result" layoutX="49.0" layoutY="265.0" prefHeight="49.0" prefWidth="211.0" promptText="Write result..." wrapText="true" />
+      <ComboBox fx:id="sampleType" layoutX="50.0" layoutY="120.0" prefWidth="150.0" promptText="Type" />
    </children>
 </AnchorPane>
