--- a/src/client/view/doctor/AddEditSampleView.fxml
+++ b/src/client/view/doctor/AddEditSampleView.fxml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="690.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
    <children>
-      <TextArea fx:id="result" layoutX="24.0" layoutY="280.0" prefHeight="49.0" prefWidth="211.0" wrapText="true" promptText="Write result..." />
       <Label layoutX="95.0" layoutY="22.0" text="Sample">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
 
-      <Button layoutX="206.0" layoutY="424.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="70.0" text="Save" />
-      <DatePicker fx:id="deadline" layoutX="51.0" layoutY="163.0" prefHeight="26.0" prefWidth="211.0" promptText="Deadline" />
-      <ComboBox fx:id="priority" layoutX="51.0" layoutY="206.0" prefHeight="26.0" prefWidth="211.0" promptText="Priority" />
-      <Button layoutX="125.0" layoutY="424.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" />
-      <Button layoutX="43.0" layoutY="424.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="30.0" prefWidth="70.0" text="Clear" />
+      <Button layoutX="184.0" layoutY="424.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="70.0" text="Save" />
+      <DatePicker fx:id="deadline" layoutX="23.0" layoutY="163.0" prefHeight="26.0" prefWidth="211.0" promptText="Deadline" />
+      <ComboBox fx:id="priority" layoutX="23.0" layoutY="206.0" prefHeight="26.0" prefWidth="211.0" promptText="Priority" />
+      <Button layoutX="103.0" layoutY="424.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" />
+      <Button layoutX="21.0" layoutY="424.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="30.0" prefWidth="70.0" text="Clear" />
 
-      <ImageView fitHeight="501.0" fitWidth="386.0" layoutX="304.0">
+      <ImageView fitHeight="501.0" fitWidth="420.0" layoutX="279.0">
          <image>
             <Image url="@../../images/sample_image6.jpg" />
          </image>
@@ -29,8 +33,8 @@
             <DropShadow color="#161616" />
          </effect>
       </ImageView>
-      <TextArea fx:id="result" layoutX="49.0" layoutY="265.0" prefHeight="49.0" prefWidth="211.0" promptText="Write result..." wrapText="true" />
-      <ComboBox fx:id="sampleType" layoutX="50.0" layoutY="120.0" prefWidth="150.0" promptText="Type" />
+      <TextArea fx:id="result" layoutX="21.0" layoutY="265.0" prefHeight="49.0" prefWidth="211.0" promptText="Write result..." wrapText="true" />
+      <ComboBox fx:id="sampleType" layoutX="22.0" layoutY="120.0" prefHeight="25.0" prefWidth="211.0" promptText="Type" />
 
    </children>
 </AnchorPane>
