--- a/src/client/view/nurse/AddPatientView.fxml
+++ b/src/client/view/nurse/AddPatientView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.AddPatientViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.AddPatientViewController">
    <children>
       <TextField fx:id="firstNameTxtFieldPatient" layoutX="15.0" layoutY="84.0" prefHeight="26.0" prefWidth="211.0" promptText="First name" />
       <TextField fx:id="mNameTxtFieldPatient" layoutX="15.0" layoutY="124.0" prefHeight="26.0" prefWidth="211.0" promptText="Middle name" />
@@ -31,8 +32,6 @@
       <TextField fx:id="streetNoTxtFieldPatient" layoutX="189.0" layoutY="332.0" prefHeight="26.0" prefWidth="43.0" promptText="No" />
       <TextField fx:id="cityTxtFieldPatient" layoutX="12.0" layoutY="376.0" prefHeight="26.0" prefWidth="160.0" promptText="City " />
       <TextField fx:id="zipTxtFieldPatient" layoutX="189.0" layoutY="375.0" prefHeight="26.0" prefWidth="43.0" promptText="ZIP" />
-      <TextField fx:id="genderTxtFieldPatient" layoutX="16.0" layoutY="237.0" prefHeight="26.0" prefWidth="78.0" promptText="Gender" />
-      <TextField fx:id="bloodTypeTxtFieldPatient" layoutX="150.0" layoutY="237.0" prefHeight="26.0" prefWidth="78.0" promptText="Blood type" />
       <Label layoutX="19.0" layoutY="12.0" text="Patient data:" />
       <TextField fx:id="ssnTextFieldPatient" layoutX="16.0" layoutY="45.0" prefHeight="26.0" prefWidth="211.0" promptText="Patient SSN" AnchorPane.bottomAnchor="429.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="473.0" AnchorPane.topAnchor="45.0" />
       <TextArea fx:id="medicalDescryNurseToPatientTxtArea" layoutX="322.0" layoutY="241.0" prefHeight="194.0" prefWidth="366.0" promptText="Medical description..." style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;" wrapText="true">
@@ -43,6 +42,8 @@
       <Button layoutX="18.0" layoutY="452.0" mnemonicParsing="false" onAction="#onBackButtonAddPatient" prefHeight="26.0" prefWidth="58.0" style="-fx-border-color: #90a4ae;" text="Back" />
       <Button layoutX="94.0" layoutY="452.0" mnemonicParsing="false" onAction="#onClearButtonAddPatient" prefHeight="26.0" prefWidth="58.0" text="Clear" />
       <Button layoutX="175.0" layoutY="452.0" mnemonicParsing="false" onAction="#onSaveButtonAddPatient" prefHeight="26.0" prefWidth="58.0" text="Save" />
+      <ComboBox fx:id="genderCB" layoutX="14.0" layoutY="250.0" prefHeight="25.0" prefWidth="84.0" promptText="Gender" />
+      <ComboBox fx:id="bloodTypeCB" layoutX="129.0" layoutY="250.0" prefHeight="25.0" prefWidth="104.0" promptText="Blood Type" />
    </children>
    <effect>
       <ColorAdjust brightness="-0.06" contrast="0.07" />
